se ajustan cambios de los entitys

--- a/src/app/pages/finca/ver-finca/ver-finca.component.html
+++ b/src/app/pages/finca/ver-finca/ver-finca.component.html
@@ -22,7 +22,7 @@
   <ion-list *ngFor="let finca of fincas">        
       <ion-item>  
         <ion-label>
-          <h2>{{finca.nombre}}</h2>        
+          <h2>{{finca.name}}</h2>        
         </ion-label>
         <ion-fab-button (click)="editarFinca(finca.finca_id)" size="small">
           <ion-icon name="pencil-outline"></ion-icon>
