--- a/src/app/pages/producto/producto.component.html
+++ b/src/app/pages/producto/producto.component.html
@@ -51,8 +51,8 @@
     <ion-item button (click)="editar(producto.producto_id)">
       <ion-icon slot="start" name="cart-outline" ></ion-icon>
       <ion-label>
-        <h2>Nombre: {{producto.nombre}}</h2>     
-        <h3>Variedad: {{producto.variedad}}</h3>        
+        <h2>Nombre: {{producto.name}}</h2>     
+        <h3>Variedad: {{producto.variety}}</h3>        
       </ion-label>      
     </ion-item>
   </ion-list>
