--- a/src/app/pages/siembra/ver-siembra/ver-siembra.component.html
+++ b/src/app/pages/siembra/ver-siembra/ver-siembra.component.html
@@ -22,8 +22,8 @@
     <ion-item button (click)="menuSiembras(siembra)">
       <ion-icon slot="start" name="leaf-outline" ></ion-icon>      
       <ion-label>
-        <h2>Lote: {{siembra.lote}}</h2>     
-        <h3>Surco: {{siembra.surco}}</h3>
+        <h2>Lote: {{siembra.batch}}</h2>     
+        <h3>Surco: {{siembra.groove}}</h3>
         <p>Producto: {{siembra.producto}}</p>   
       </ion-label>
     </ion-item>
