--- a/src/app/pages/finca/ver-finca/ver-finca.component.html
+++ b/src/app/pages/finca/ver-finca/ver-finca.component.html
@@ -24,10 +24,10 @@
         <ion-label>
           <h2>{{finca.name}}</h2>        
         </ion-label>
-        <ion-fab-button (click)="editarFinca(finca.land_id)" size="small">
+        <ion-fab-button (click)="editarFinca(finca.landId)" size="small">
           <ion-icon name="pencil-outline"></ion-icon>
         </ion-fab-button>
-        <ion-icon slot="end" name="leaf-outline" button (click)="verSiembras(finca.land_id)">Ver siembras</ion-icon>
+        <ion-icon slot="end" name="leaf-outline" button (click)="verSiembras(finca.landId)">Ver siembras</ion-icon>
       </ion-item>
   </ion-list>
 </ion-content>
