--- a/src/app/pages/aplicacion/aplicacion.page.html
+++ b/src/app/pages/aplicacion/aplicacion.page.html
@@ -43,28 +43,33 @@
       <ion-row color="primary" justify-content-center>
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
           <div padding>
-            <ion-item>
-              <ion-label *ngIf="estadoEditar === true">
+            <ion-item *ngIf="estadoEditar === true">
+              <ion-label>
                 {{this.loteNombre}}
               </ion-label>
             </ion-item>            
-            <ion-select [(ngModel)]="lote" name="lote" placeholder="Seleccione un lote">
-              <ion-select-option *ngFor="let lote of listaLotes" value="{{lote.plano_id}}"> Lote: {{ lote.lote }} - Surco: {{lote.surco}}</ion-select-option>
+            <ion-select [(ngModel)]="lote" name="lote" placeholder="Seleccione un lote" interface="action-sheet" (ionChange)="seleccionarLote(lote)">
+              <ion-select-option *ngFor="let lotes of listaLotes" value="{{lotes.id}}"> {{ lotes.batch }} - Surco: {{lotes.groove}}</ion-select-option>
             </ion-select>
-            <ion-select [(ngModel)]="actividad" name="actividad" placeholder="Seleccione una actividad">
+            <ion-select [(ngModel)]="actividad" name="actividad" placeholder="Seleccione una actividad" interface="action-sheet">
               <ion-select-option *ngFor="let actividad of listaActividad" value="{{actividad}}">{{ actividad }}
               </ion-select-option>
             </ion-select>
 
-            <ion-select [(ngModel)]="control" name="control" placeholder="Seleccione una opción">
+            <ion-select [(ngModel)]="control" name="control" placeholder="Seleccione una opción" interface="action-sheet">
               <ion-select-option *ngFor="let controlL of controlTipo" value="{{controlL}}">{{controlL}}
               </ion-select-option>
-            </ion-select>                     
-            <ion-select [(ngModel)]="producto" name="producto" placeholder="Seleccione un producto" ngModel required>
+            </ion-select>
+            <ion-item >
+              <ion-label>
+                Producto: {{producto}}
+              </ion-label>
+            </ion-item>            
+            <!--<ion-select [(ngModel)]="producto" name="producto" placeholder="Seleccione un producto" ngModel required interface="action-sheet">
               <ion-select-option *ngFor="let producto of productos" value="{{producto.producto_id}}" >
                 {{producto.nombre}} - {{producto.variedad}}
               </ion-select-option>
-            </ion-select>            
+            </ion-select>-->
             <ion-item>
               <ion-label position="floating">Dosis</ion-label>
               <ion-input [(ngModel)]="dosis" name="dosis" type="number" placeholder="Dosis (L)" ngModel required>
@@ -90,11 +95,11 @@
               <ion-datetime [(ngModel)]="fecha_aplicacion" name="fecha_aplicacion" value="2021-05-20"
                 placeholder="Seleccionar fecha" ngModel required></ion-datetime>
             </ion-item>            
-            <ion-select [(ngModel)]="ejecucion" name="ejecucion" placeholder="Seleccione una ejecución">
+            <ion-select [(ngModel)]="ejecucion" name="ejecucion" placeholder="Seleccione una ejecución" interface="action-sheet">
               <ion-select-option *ngFor="let ejec of listaEjecucion" value="{{ejec}}">{{ ejec }}</ion-select-option>
             </ion-select>
             <ion-item>
-              <ion-label position="floating">Calidad ejecucion</ion-label>
+              <ion-label >Calidad ejecución</ion-label>
             </ion-item>
             <ion-item>              
               <ion-range [(ngModel)]="calidad_ejecucion" name="calidad_ejecucion" min="0" max="5" step="0.5" snaps="true" color="secondary" ngModel required>
