--- a/src/app/pages/finca/ver-finca/ver-finca.component.html
+++ b/src/app/pages/finca/ver-finca/ver-finca.component.html
@@ -17,6 +17,8 @@
       refreshingSpinner="circles"
       refreshingText="Refreshing...">      
     </ion-refresher-content>
+
+    <finca-component></finca-component>
     
   </ion-refresher>
   <ion-list *ngFor="let finca of fincas">        
