--- a/src/app/version2/pages/predio/predio.component.html
+++ b/src/app/version2/pages/predio/predio.component.html
@@ -1,3 +1,26 @@
-<p>
-  predio works!
-</p>
+<ion-header translucent>
+  <ion-toolbar>
+    <ion-title>Predios</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="volver()">Volver</ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+<ion-content fullscreen>
+  
+  <br>
+  <ion-list *ngFor="let gp of predios">
+    <ion-item button (click)="verPiscina(gp)">
+      <ion-label>
+        <h2><!--Nombre:--> {{gp.nombre}}</h2>        
+      </ion-label>
+      <ion-icon slot="end" name="reader-outline" ></ion-icon>      
+    </ion-item>
+  </ion-list>
+  <br>
+  <ion-button expand="full" color="secondary" expand="block" (click)="nuevoPredio()">
+    <ion-icon slot="start" name="add-outline"></ion-icon>
+      Nuevo predio
+  </ion-button>  
+
+</ion-content>
