--- a/src/app/version2/pages/nivel/nivel.component.html
+++ b/src/app/version2/pages/nivel/nivel.component.html
@@ -25,8 +25,11 @@
       Nuevo {{boton}}
   </ion-button>
   <ion-button expand="full" color="secondary" expand="block" (click)="volver()">
-    <ion-icon slot="start" name="add-outline"></ion-icon>
+    <ion-icon slot="start" name="caret-back-circle-outline"></ion-icon>
       Volver
   </ion-button>
-
+  <ion-button [ngClass]="{'activated' : buttonActive}" expand="full" color="secondary" expand="block" (click)="insertarActividad()">
+    <ion-icon slot="start" name="caret-back-circle-outline"></ion-icon>
+      Insertar Actividad
+  </ion-button>
 </ion-content>
