--- a/src/app/pages/aplicacion/ver-planilla/planillas/planillas.component.html
+++ b/src/app/pages/aplicacion/ver-planilla/planillas/planillas.component.html
@@ -28,18 +28,18 @@
     
 
     <ion-item>
-      <ion-label>Finca: </ion-label>
+      <ion-label>Nivel: </ion-label>
       <ion-label>{{planilla.fincaNombre}}</ion-label>
     </ion-item>
-    <ion-item-divider>
+  <!--  <ion-item-divider>
       <ion-label>Lote: </ion-label>
     </ion-item-divider>          
     <ion-item>
       <ion-label>      {{planilla.lote}}</ion-label>
-    </ion-item>
+    </ion-item>-->
     <ion-item>
       <ion-label>Actividad: </ion-label>
-      <ion-label>{{planilla.actividad}}</ion-label>
+      <ion-label>{{planilla.activity}}</ion-label>
     </ion-item>
     <ion-item>
       <ion-label>Tipo: </ion-label>
@@ -53,31 +53,31 @@
     </ion-item>
     <ion-item>
       <ion-label>Dosis: </ion-label>
-      <ion-label>{{planilla.dosis}}</ion-label>
+      <ion-label>{{planilla.dose}}</ion-label>
     </ion-item>
     <ion-item>
       <ion-label>Mezcla total: </ion-label>
-      <ion-label>{{planilla.mezcla_total}}</ion-label>
+      <ion-label>{{planilla.totalMix}}</ion-label>
     </ion-item>
     <ion-item>
       <ion-label>Total dosis: </ion-label>
-      <ion-label>{{planilla.total_dosis}}</ion-label>
+      <ion-label>{{planilla.totalDose}}</ion-label>
     </ion-item>
     <ion-item>
       <ion-label>Elaborado: </ion-label>
-      <ion-label> {{planilla.elaborado}}</ion-label>
+      <ion-label> {{planilla.madeBy}}</ion-label>
     </ion-item>
     <ion-item>
       <ion-label>Fecha aplicación: </ion-label>
-      <ion-label> {{planilla.fechaAplicacionString}}</ion-label>
+      <ion-label> {{planilla.applicationDate | date:'mediumDate'}}</ion-label>
     </ion-item>
     <ion-item>
       <ion-label>Estado: </ion-label>
-      <ion-label>  {{planilla.estado}}</ion-label>
+      <ion-label>  {{planilla.status}}</ion-label>
     </ion-item>
     <ion-item>
       <ion-label>Calidad ejecución: </ion-label>
-      <ion-label>  {{planilla.calidad_ejecucion}}</ion-label>
+      <ion-label>  {{planilla.quality}}</ion-label>
     </ion-item>
   </ion-item-group>
 
@@ -85,6 +85,7 @@
                  
 </div>
   <section class="full-width">    
-    <ion-button expand="full" color="secondary" (click)="registrar()">Ingresar nueva planilla</ion-button>
+    <ion-button expand="full" color="secondary" expand="block" (click)="registrar()">Ingresar nueva planilla</ion-button>
+    <ion-button expand="full" color="secondary" expand="block" (click)="volver()">Volver</ion-button>
   </section>
 </ion-content>
