--- a/src/app/version2/pages/grupo-productor/agregar/agregar.component.html
+++ b/src/app/version2/pages/grupo-productor/agregar/agregar.component.html
@@ -1,6 +1,6 @@
 <ion-header translucent>
   <ion-toolbar>
-    <ion-title>Agregar {{titulo}}</ion-title>
+    <ion-title>{{accion}} {{titulo}}</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="dismissModal()">Cerrar</ion-button>
     </ion-buttons>
