--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -15,8 +15,8 @@
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
           <div padding>            
             <ion-item>
-              <ion-label position="floating">Cedula</ion-label>
-              <ion-input [(ngModel)]="cedula" name="user" type="number" placeholder="No. Cédula" ngModel required></ion-input>
+              <ion-label position="floating">No. Documento</ion-label>
+              <ion-input [(ngModel)]="cedula" name="user" type="number" placeholder="No. Documento" ngModel required></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Contraseña</ion-label>
