--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -24,7 +24,7 @@
               <ion-input [(ngModel)]="apellido" name="apellido" type="text" placeholder="Apellido" ngModel required></ion-input>
             </ion-item>
             <ion-item>
-              <ion-label position="floating">Cédula</ion-label>
+              <ion-label position="floating">No. Documento</ion-label>
               <ion-input [(ngModel)]="cedula" name="cedula" type="number" ngModel required></ion-input>
             </ion-item>
             <ion-item>
@@ -32,12 +32,12 @@
               <ion-input [(ngModel)]="correo" name="correo" type="email" placeholder="Correo electrónico" ngModel required></ion-input>
             </ion-item>
             <ion-item>
-              <ion-label position="floating">Departamento</ion-label>
-              <ion-input [(ngModel)]="departamento" name="depto" type="text" placeholder="Departamento" ngModel required></ion-input>
+              <ion-label position="floating">Departamento - Estado</ion-label>
+              <ion-input [(ngModel)]="departamento" name="depto" type="text" placeholder="Departamento - Estado" ngModel required></ion-input>
             </ion-item>
             <ion-item>
-              <ion-label position="floating">Ciudad</ion-label>
-              <ion-input [(ngModel)]="ciudad" name="ciudad" type="text" placeholder="Ciudad" ngModel required></ion-input>
+              <ion-label position="floating">Ciudad - Municipio</ion-label>
+              <ion-input [(ngModel)]="ciudad" name="ciudad" type="text" placeholder="Ciudad - Municipio" ngModel required></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Contraseña</ion-label>
