--- a/src/app/pages/aplicacion/aplicacion.page.html
+++ b/src/app/pages/aplicacion/aplicacion.page.html
@@ -91,7 +91,7 @@
               <ion-label >Calidad ejecución</ion-label>
             </ion-item>
             <ion-item>              
-              <ion-range [(ngModel)]="calidad_ejecucion" name="calidad_ejecucion" min="0" max="5" step="0.5" snaps="true" color="secondary" ngModel required>
+              <ion-range [(ngModel)]="calidad_ejecucion" name="calidad_ejecucion" min="0" max="5" step="0.5" snaps="true" (ionChange)="cambiarColorEjecucion()"  color="{{colorRange}}" ngModel required>
                 <ion-label slot="start">0</ion-label>
                 <ion-label slot="end">5</ion-label>
               </ion-range>
