--- a/src/app/pages/aplicacion/ver-planilla/planillas/planillas.component.html
+++ b/src/app/pages/aplicacion/ver-planilla/planillas/planillas.component.html
@@ -9,11 +9,11 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">  
+<ion-content [fullscreen]="true" >  
   <ion-item>
     <ion-label>Filtrar por fecha: </ion-label>
-    <ion-datetime [(ngModel)]="fecha_aplicacion" name="fecha_aplicacion" value="2021-05-20"
-                placeholder="Seleccionar fecha" ngModel required></ion-datetime>
+    <ion-datetime [(ngModel)]="fechaFiltro" name="fechaFiltro" value="2021-05-20"
+                placeholder="Seleccionar fecha" ngModel required (ionChange)="filtrarPorFecha()"></ion-datetime>
   </ion-item>
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
     <ion-refresher-content
@@ -26,14 +26,13 @@
   </ion-refresher>
   <ion-item-group *ngFor="let planilla of planillas">
     <ion-item-divider color="secondary">
-      <ion-icon slot="start" name="pencil-outline" button (click)="editar(planilla.spreadsheetId)"></ion-icon> 
-      <ion-label> Formulación: </ion-label>        
-      <ion-label>{{planilla.fechaString}} </ion-label>
+      <ion-icon slot="start" name="pencil-outline" button (click)="editar(planilla.spreadsheetId)"></ion-icon>       
+      <ion-label  class="ajustarLetraEspacio">Formulación:  {{planilla.filingDate | date:'mediumDate'}} </ion-label>
     </ion-item-divider>    
 
     <ion-item>
-      <ion-label>Nivel: </ion-label>
-      <ion-label>{{planilla.fincaNombre}}</ion-label>
+      <ion-label class="ajustarLetraEspacio">Nivel: </ion-label>
+      <ion-label  class="ajustarLetraEspacio">{{planilla.fincaNombre}}</ion-label>
     </ion-item>
   <!--  <ion-item-divider>
       <ion-label>Lote: </ion-label>
@@ -42,19 +41,17 @@
       <ion-label>      {{planilla.lote}}</ion-label>
     </ion-item>-->
     <ion-item>
-      <ion-label>Actividad: </ion-label>
-      <ion-label>{{planilla.activity}}</ion-label>
+      <ion-label class="ajustarLetraEspacio">Actividad: </ion-label>
+      <ion-label  class="ajustarLetraEspacio">{{planilla.activity}}</ion-label>
     </ion-item>
     <ion-item>
-      <ion-label>Tipo: </ion-label>
-      <ion-label>{{planilla.control}}</ion-label>
+      <ion-label class="ajustarLetraEspacio">Tipo: </ion-label>
+      <ion-label  class="ajustarLetraEspacio">{{planilla.control}}</ion-label>
     </ion-item>    
        
     <ion-item>
-          <ion-label>Producto: </ion-label>
-          <ion-label> {{planilla.producto}}</ion-label>
-    
-      
+        <ion-label class="ajustarLetraEspacio">Producto: </ion-label>
+        <ion-label  class="ajustarLetraEspacio"> {{planilla.producto}}</ion-label>          
     </ion-item>
     <!--<ion-item>
       <ion-label>Dosis: </ion-label>
@@ -69,23 +66,27 @@
       <ion-label>{{planilla.totalDose}}</ion-label>
     </ion-item>-->
     <ion-item>
-      <ion-label>Elaborado: </ion-label>
-      <ion-label> {{planilla.madeBy}}</ion-label>
+      <ion-label class="ajustarLetraEspacio">Elaborado: </ion-label>
+      <ion-label class="ajustarLetraEspacio"> {{planilla.madeBy}}</ion-label>
     </ion-item>
     <ion-item>
-      <ion-label>Fecha aplicación: </ion-label>
-      <ion-label> {{planilla.applicationDate | date:'mediumDate'}}</ion-label>
+      <ion-label class="ajustarLetraEspacio">Ejecutado: </ion-label>
+      <ion-label class="ajustarLetraEspacio"> {{planilla.executedBy}}</ion-label>
     </ion-item>
     <ion-item>
-      <ion-label>Estado: </ion-label>
-      <ion-label>  {{planilla.status}}</ion-label>
+      <ion-label class="ajustarLetraEspacio">Fecha ejecución: </ion-label>
+      <ion-label class="ajustarLetraEspacio"> {{planilla.applicationDate | date:'mediumDate'}}</ion-label>
     </ion-item>
     <ion-item>
-      <ion-label>Calidad ejecución: </ion-label>
-      
+      <ion-label class="ajustarLetraEspacio">Estado: </ion-label>
+      <ion-label class="ajustarLetraEspacio">  {{planilla.status}}</ion-label>
     </ion-item>
     <ion-item>
-      <ion-progress-bar color="secondary" value={{planilla.quality}}></ion-progress-bar>
+      <ion-label class="ajustarLetraEspacio">Calidad ejecución: </ion-label>
+      <ion-label class="ajustarLetraEspacio">{{planilla.quality}}</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-progress-bar color="{{planilla.colorQuality}}" value={{planilla.qualityRango}}></ion-progress-bar>
     </ion-item>
   <br>
 <br>
