--- a/src/app/pages/aplicacion/aplicacion.page.html
+++ b/src/app/pages/aplicacion/aplicacion.page.html
@@ -2,6 +2,10 @@
   <ion-toolbar color="light">    
     <ion-title stacked class="my-title" color="dark">
       <div font size=4 align="center"><strong>AGENDA APP</strong></div>
+      <i>
+        <div *ngIf="subtitulo" font size=1 align="center" class="text-wrap">{{subtitulo}}</div>
+          <H6></H6>
+        </i>
       <div font size=1 align="center"><i>
           <H6>{{titulo}}</H6>
         </i></div>
@@ -10,6 +14,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">  
+
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
     <ion-refresher-content
       pullingIcon="chevron-down-circle-outline"
@@ -141,7 +146,7 @@
           <div padding>
             <ion-button expand="full" color="success" type="submit" [disabled]="form.invalid" expand="block">{{nombreBoton}}
             </ion-button>
-            <ion-button expand="full" color="secondary" expand="block" (click)="volver()">Volver</ion-button>
+            <ion-button expand="full" color="danger" expand="block" (click)="volver()">Volver</ion-button>
           </div>
 
         </ion-col>
