--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -48,7 +48,12 @@
               <ion-input [(ngModel)]="claveConfirmacion" name="claveConfirmacion" type="password" ngModel required></ion-input>
             </ion-item>
             <ion-button expand="full" color="success" type="submit" [disabled]="form.invalid" expand="block">
+              Registrar
               <ion-icon name="log-in-outline"></ion-icon> 
+            </ion-button>
+            <ion-button (click)="volver()" color="danger" expand="block">
+              <ion-icon name="caret-back-circle-outline"></ion-icon>
+              Volver
             </ion-button>
           </div>
         </ion-col>
@@ -56,6 +61,6 @@
     </ion-grid>
   </form>  
   
-    <ion-button (click)="volver()" expand="full">Volver</ion-button>
+    
   
 </ion-content>
