--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,14 +13,15 @@
       <ion-icon name="leaf-outline"></ion-icon>
       <ion-label>Siembra</ion-label>
     </ion-tab-button>
-    -->
+    
      <ion-tab-button (click)="menuPlanilla()">
         <ion-icon name="reader-outline"></ion-icon>        
       </ion-tab-button>
+      -->
 
-      <ion-tab-button (click)="menuProductos()">
+      <!--<ion-tab-button (click)="menuProductos()">
         <ion-icon name="cart-outline"></ion-icon>        
-      </ion-tab-button>
+      </ion-tab-button>-->
 
       <ion-tab-button (click)="configuracion()">
         <ion-icon name="settings-outline"></ion-icon> 
