--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -28,7 +28,7 @@
 
             
           </div>
-          <div>
+          <!--<div>
             <ion-item>
               <ion-label color="primary">¿No tiene una cuenta?</ion-label>
                 <ion-button expand="full" color="secondary" expand="block" (click)="registrar()">
@@ -36,7 +36,7 @@
                 </ion-button>
                 <button ion-button full icon-left (click) = "qrcode()"><ion-icon name = "barcode"></ion-icon>Create code </button>
             </ion-item>
-          </div>
+          </div>-->
         </ion-col>
       </ion-row>
     </ion-grid>
